Fixed error in ΔS6(S2) derivation

--- a/akshit_notebooks/006_fig1_plots.ipynb
+++ b/akshit_notebooks/006_fig1_plots.ipynb
@@ -459,20 +459,7 @@
     "# In discussion we decided to only vary ZC_org for the main text.\n",
     "# In the SI we can co-vary ZC_org and S3. \n",
     "# We will explicitly avoid coupling S3 (catabolic ATP yield) to \n",
-    "# S2 in this paper. \n",
-    "\n",
-    "# OFFSETTING S6 WHEN CHANGING S2.\n",
-    "# Note that S2 = (4 - ZC_org NC_org)/2\n",
-    "# So ZC_org = (4 - 2 S2)/NC_org\n",
-    "# Assuming the basal ZC of biomass is 0 (similar to glucose).\n",
-    "# If the carbon source is not glucose, we need to offset S6 to \n",
-    "# correctly account for electrons released/needed to convert Corg to biomass.\n",
-    "# electrons released = (0 - ZC_org)/2\n",
-    "# So we need to offset S6 by a value ΔS6 = ZC_org/2\n",
-    "# Using the expression above, we have:\n",
-    "# ΔS6 = (2 - S2)/NC_org\n",
-    "# Sanity check: for glucose (ZC_org = ZC_biomass), \n",
-    "# we get ΔS6 = 0, as expected.\n",
+    "# S2 in this paper.\n",
     "\n",
     "tau = 1e-4\n",
     "\n",
@@ -665,7 +652,7 @@
     "# Assuming the basal ZC of biomass is 0 (similar to glucose).\n",
     "# If the carbon source is not glucose, we need to offset S6 to \n",
     "# correctly account for electrons released/needed to convert Corg to biomass.\n",
-    "# electrons released = (0 - ZC_org)/2\n",
+    "# electrons released = (0 - ZC_org)\n",
     "# So we need to offset S6 by a value ΔS6 = ZC_org/2\n",
     "# Using the expression above, we have:\n",
     "# ΔS6 = (2 - S2)/NC_org\n",
