--- a/akshit_notebooks/008_full_mm_lambda_S6.ipynb
+++ b/akshit_notebooks/008_full_mm_lambda_S6.ipynb
@@ -148,7 +148,7 @@
    "id": "8811f297",
    "metadata": {},
    "source": [
-    "We can now study different regimes of our simulations to understand the sign of $\\frac{d \\lambda}{d S_6}$. In case I, we considered the regime where NADH levels were homeostatically maintained, i.e., $ \\frac{\\partial (NADH)}{\\partial S_6} = 0 $. We shall now examine a more general case, where NADH levels are dynamic. Fluxes that depend on NADH levels can be either in the linear or saturated regimes, as determined by the following generalized Michaelis-Menten dependence:"
+    "We can now study different regimes of our simulations to understand the sign of $\\frac{d \\lambda}{d S_6}$. In case I, we considered the regime where NADH levels were homeostatically maintained, i.e., $ \\frac{\\partial (NADH)}{\\partial S_6} = 0 $. We shall now examine a more general case, where NADH levels are dynamic. Fluxes that depend on NADH levels can be either be in the linear or saturated regimes, as determined by the following generalized Michaelis-Menten dependence:"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "id": "7d89ae15",
    "metadata": {},
    "source": [
-    "where $NADH$ is the dimensionless concentration of MADH, measured in units of its half-saturation constant $K_{M, NADH}$. Depending on the value of $S_{\\alpha i}$, this expression saturates at different values of $NADH = \\frac{[NADH]}{K_{M,NADH}}$, where [NADH] represents the true concentration of NADH in mM units.\n",
+    "where $NADH$ is the dimensionless concentration of NADH, measured in units of its half-saturation constant $K_{M, NADH}$. Depending on the value of $S_{\\alpha i}$, this expression saturates at different values of $NADH = \\frac{[NADH]}{K_{M,NADH}}$, where [NADH] represents the true concentration of NADH in mM units.\n",
     "\n",
     "For reference, when $S_{\\alpha i} = 1$, it saturates (reaches 90% of its maximum value)  at roughly $NADH \\approx 10$, and when $S_{\\alpha i} = 2$, it reaches the same value at roughly $NADH \\approx 3$.\n",
     "\n",
@@ -179,7 +179,7 @@
    "id": "b444f666",
    "metadata": {},
    "source": [
-    "$$ J_{cat} \\implies S_{cat, NADH} = 2 $$\n",
+    "$$ J_{cat} \\implies S_{cat, NAD} = 2 $$\n",
     "$$ J_{resp} \\implies S_{resp, NADH} = 2 $$\n",
     "$$ J_{ana} \\implies S_{ana, NADH} = S_6 \\in [-0.1, 0.5] $$"
    ]
