--- a/notebooks/RUN_ALL.ipynb
+++ b/notebooks/RUN_ALL.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +52,14 @@
     "\n",
     "# TODO: populate fg_per_cell for the non-coli data? \n",
     "all_data_df = pd.concat([coli_exp_df, yeast_exp_df, cyano_exp_df])\n",
+    "\n",
+    "nc_total_per_cond = all_data_df.groupby('dataset,organism_key,condition'.split(',')).sum()['NC_total']\n",
+    "idx = [(i,j,k) for i,j,k in zip(all_data_df.dataset.values, \n",
+    "                                all_data_df.organism_key.values,\n",
+    "                                all_data_df.condition.values)]\n",
+    "per_entry_C_total = nc_total_per_cond.loc[idx].values\n",
+    "all_data_df['C_fraction'] = all_data_df['NC_total'] / per_entry_C_total\n",
+    "\n",
     "all_data_df.to_csv('../data/proteomes/all_protein_measurements.csv', index=False)"
    ]
   },
