adding various notebooks with cute calcs

--- a/notebooks/sim_pathway_kinetics.ipynb
+++ b/notebooks/sim_pathway_kinetics.ipynb
@@ -18,7 +18,9 @@
     "from sympy import vector, solve\n",
     "from typing import Tuple\n",
     "from cycler import cycler\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "\n",
+    "plt.style.use('style.mpl')"
    ]
   },
   {
