make the optimization work again

--- a/notebooks/LinearizedRespModel.ipynb
+++ b/notebooks/LinearizedRespModel.ipynb
@@ -59,51 +59,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "===============================================================================\n",
-      "                                     CVXPY                                     \n",
-      "                                     v1.2.1                                    \n",
-      "===============================================================================\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Your problem has 5 variables, 3 constraints, and 23 parameters.\n",
-      "(CVXPY) Aug 31 03:11:31 PM: It is compliant with the following grammars: DCP, DQCP\n",
-      "(CVXPY) Aug 31 03:11:31 PM: CVXPY will first compile your problem; then, it will invoke a numerical solver to obtain a solution.\n",
-      "-------------------------------------------------------------------------------\n",
-      "                                  Compilation                                  \n",
-      "-------------------------------------------------------------------------------\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Compiling problem (target solver=ECOS).\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Reduction chain: EvalParams -> FlipObjective -> Dcp2Cone -> CvxAttr2Constr -> ConeMatrixStuffing -> ECOS\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Applying reduction EvalParams\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Applying reduction FlipObjective\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Applying reduction Dcp2Cone\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Applying reduction CvxAttr2Constr\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Applying reduction ConeMatrixStuffing\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Applying reduction ECOS\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Finished problem compilation (took 2.955e-02 seconds).\n",
-      "-------------------------------------------------------------------------------\n",
-      "                                Numerical solver                               \n",
-      "-------------------------------------------------------------------------------\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Invoking solver ECOS  to obtain a solution.\n",
-      "\n",
-      "ECOS 2.0.10 - (C) embotech GmbH, Zurich Switzerland, 2012-15. Web: www.embotech.com/ECOS\n",
-      "\n",
-      "It     pcost       dcost      gap   pres   dres    k/t    mu     step   sigma     IR    |   BT\n",
-      " 0  -6.061e-01  +6.520e-01  +2e+01  6e-01  7e-01  1e+00  4e+00    ---    ---    1  1  - |  -  - \n",
-      " 1  -1.880e+00  -1.742e+00  +3e+00  6e-02  4e-02  1e-01  4e-01  0.8987  3e-02   0  0  0 |  0  0\n",
-      " 2  -1.375e+00  -1.364e+00  +3e-01  6e-03  2e-03  9e-03  5e-02  0.9206  3e-02   0  0  0 |  0  0\n",
-      " 3  -1.345e+00  -1.344e+00  +5e-03  8e-05  3e-05  1e-04  8e-04  0.9838  8e-04   0  0  0 |  0  0\n",
-      " 4  -1.344e+00  -1.344e+00  +6e-05  9e-07  3e-07  1e-06  9e-06  0.9890  1e-04   1  0  0 |  0  0\n",
-      " 5  -1.344e+00  -1.344e+00  +6e-07  1e-08  4e-09  2e-08  1e-07  0.9890  1e-04   1  0  0 |  0  0\n",
-      " 6  -1.344e+00  -1.344e+00  +7e-09  1e-10  4e-11  2e-10  1e-09  0.9890  1e-04   1  0  0 |  0  0\n",
-      "\n",
-      "OPTIMAL (within feastol=1.2e-10, reltol=5.4e-09, abstol=7.2e-09).\n",
-      "Runtime: 0.000177 seconds.\n",
-      "\n",
-      "-------------------------------------------------------------------------------\n",
-      "                                    Summary                                    \n",
-      "-------------------------------------------------------------------------------\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Problem status: optimal\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Optimal value: 1.344e+00\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Compilation took 2.955e-02 seconds\n",
-      "(CVXPY) Aug 31 03:11:31 PM: Solver (including time spent in interface) took 8.130e-04 seconds\n"
+      "5e-05\n",
+      "1.296\n"
+     ]
+    }
+   ],
+   "source": [
+    "g_ana = (lam.kcat_s/lam.m_Da)[2]\n",
+    "print(\"{0:.1g}\".format(g_ana))\n",
+    "\n",
+    "# estimate of growth rate assuming phi_ana = (1-min_phi_0) = 0.6\n",
+    "min_phi_0 = 0.4\n",
+    "print((1-min_phi_0)*g_ana*12*3600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2024-10-03\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the growth rate for a zero order model. \n",
+    "params = GrowthRateOptParams(min_phi_O=0.4, max_phi_H=0)\n",
+    "max_lam, opt_p = lam.maximize_growth_rate(params)\n",
+    "# Get the results as a dictionary\n",
+    "res_dict = lam.results_as_dict(opt_p, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g_ana 0.0001\n",
+      "expected g_ana 0.0001\n",
+      "analytic gamma ub 4.32 /hr\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sanity check the value of gamma for anabolism\n",
+    "anabolism_gamma = res_dict['anabolism_gamma']\n",
+    "ana_kcat_s = res_dict['anabolism_kcat_s']\n",
+    "ana_m_kDa = res_dict['anabolism_m_kDa']\n",
+    "# factor of 1000 converts from kDa to Da\n",
+    "# factor 2 accounts for ≈50% of mass being carbon\n",
+    "expected_gamma = ana_kcat_s/(ana_m_kDa*1000/2)\n",
+    "print('g_ana', anabolism_gamma)\n",
+    "print('expected g_ana', expected_gamma)\n",
+    "\n",
+    "# Do we get a reasonable maximum growth rate?\n",
+    "analytic_gamma_ub = anabolism_gamma*12*3600*(1-res_dict['min_phi_0'])\n",
+    "print('analytic gamma ub', analytic_gamma_ub, '/hr')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max growth rate 1.3439801528975348\n"
      ]
     },
     {
@@ -114,16 +146,6 @@
       "\thttps://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming\n",
       "  warnings.warn(dpp_error_msg)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.343980153629763"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -131,43 +153,18 @@
     "# If the density rho ≈ 1000 g/L, 1/rho ≈ 1e-3 L/g = 1 mL/g so... \n",
     "# 1e-3 mol/L x 1e-3 L/g x 0.3 gDW/g x 2 gDW/gCDW = 1.5e-7 mol/gCDW\n",
     "params = GrowthRateOptParams(min_phi_O=0.4, \n",
-    "                             #rate_law=ZerothOrderRateLaw(),\n",
     "                             do_dilution=True,\n",
     "                             rate_law=SingleSubstrateMMRateLaw(),\n",
     "                             fixed_ATP=DEFAULT_ATP, fixed_NADH=DEFAULT_NADH,\n",
     "                             fixed_re=DEFAULT_RE, fixed_ra=DEFAULT_RE)\n",
-    "p = lam.max_growth_rate_problem(params)\n",
-    "p.solve(verbose=True)\n",
-    "\n",
-    "#lam.solution_as_dict(p)"
+    "max_lam, opt_p = lam.maximize_growth_rate(params)\n",
+    "print('max growth rate', max_lam)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.2870588142242774"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Do a quick run of the model to make sure it is feasible\n",
-    "params = GrowthRateOptParams(maintenance_cost=1e-6, phi_O=0.4)\n",
-    "opt, problem = lam.maximize_growth_rate(params)\n",
-    "opt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -352,14 +349,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>400.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
@@ -376,14 +373,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>400.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
@@ -400,14 +397,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>400.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
@@ -424,14 +421,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>400.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
@@ -448,14 +445,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>400.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1000.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
@@ -477,25 +474,25 @@
       ],
       "text/plain": [
        "   oxidation_kcat_s  oxidation_m_kDa  reduction_kcat_s  reduction_m_kDa  \\\n",
-       "0             100.0           2000.0             400.0           2000.0   \n",
-       "1             100.0           2000.0             400.0           2000.0   \n",
-       "2             100.0           2000.0             400.0           2000.0   \n",
-       "3             100.0           2000.0             400.0           2000.0   \n",
-       "4             100.0           2000.0             400.0           2000.0   \n",
+       "0              50.0           1000.0             200.0           1000.0   \n",
+       "1              50.0           1000.0             200.0           1000.0   \n",
+       "2              50.0           1000.0             200.0           1000.0   \n",
+       "3              50.0           1000.0             200.0           1000.0   \n",
+       "4              50.0           1000.0             200.0           1000.0   \n",
        "\n",
        "   anabolism_kcat_s  anabolism_m_kDa  ATP_homeostasis_kcat_s  \\\n",
-       "0             100.0           2000.0                   100.0   \n",
-       "1             100.0           2000.0                   100.0   \n",
-       "2             100.0           2000.0                   100.0   \n",
-       "3             100.0           2000.0                   100.0   \n",
-       "4             100.0           2000.0                   100.0   \n",
+       "0              50.0           1000.0                    50.0   \n",
+       "1              50.0           1000.0                    50.0   \n",
+       "2              50.0           1000.0                    50.0   \n",
+       "3              50.0           1000.0                    50.0   \n",
+       "4              50.0           1000.0                    50.0   \n",
        "\n",
        "   ATP_homeostasis_m_kDa  ZCB  ZCorg  ...  opt.fixed_ra  opt.fixed_re  \\\n",
-       "0                 2000.0  0.0    0.0  ...           0.3            10   \n",
-       "1                 2000.0  0.0    0.0  ...           0.3            10   \n",
-       "2                 2000.0  0.0    0.0  ...           0.3            10   \n",
-       "3                 2000.0  0.0    0.0  ...           0.3            10   \n",
-       "4                 2000.0  0.0    0.0  ...           0.3            10   \n",
+       "0                 1000.0  0.0    0.0  ...           0.3            10   \n",
+       "1                 1000.0  0.0    0.0  ...           0.3            10   \n",
+       "2                 1000.0  0.0    0.0  ...           0.3            10   \n",
+       "3                 1000.0  0.0    0.0  ...           0.3            10   \n",
+       "4                 1000.0  0.0    0.0  ...           0.3            10   \n",
        "\n",
        "   opt.rate_law_name  opt.rate_law_order  analytic_lambda_zo  \\\n",
        "0          ZeroOrder                   0                0.10   \n",
@@ -514,7 +511,7 @@
        "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +612,16 @@
      "text": [
       "/opt/miniconda3/lib/python3.8/site-packages/cvxpy/reductions/solvers/solving_chain.py:178: UserWarning: You are solving a parameterized problem that is not DPP. Because the problem is not DPP, subsequent solves will not be faster than the first one. For more information, see the documentation on Discplined Parametrized Programming, at\n",
       "\thttps://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming\n",
-      "  warnings.warn(dpp_error_msg)\n"
+      "  warnings.warn(dpp_error_msg)\n",
+      "/opt/miniconda3/lib/python3.8/site-packages/cvxpy/problems/problem.py:1343: UserWarning: \n",
+      "    The problem is either infeasible or unbounded, but the solver\n",
+      "    cannot tell which. Disable any solver-specific presolve methods\n",
+      "    and re-solve to determine the precise problem status.\n",
+      "\n",
+      "    For GUROBI and CPLEX you can automatically perform this re-solve\n",
+      "    with the keyword argument prob.solve(reoptimize=True, ...).\n",
+      "    \n",
+      "  warnings.warn(INF_OR_UNB_MESSAGE)\n"
      ]
     }
    ],
@@ -654,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +669,16 @@
      "text": [
       "/opt/miniconda3/lib/python3.8/site-packages/cvxpy/reductions/solvers/solving_chain.py:178: UserWarning: You are solving a parameterized problem that is not DPP. Because the problem is not DPP, subsequent solves will not be faster than the first one. For more information, see the documentation on Discplined Parametrized Programming, at\n",
       "\thttps://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming\n",
-      "  warnings.warn(dpp_error_msg)\n"
+      "  warnings.warn(dpp_error_msg)\n",
+      "/opt/miniconda3/lib/python3.8/site-packages/cvxpy/problems/problem.py:1343: UserWarning: \n",
+      "    The problem is either infeasible or unbounded, but the solver\n",
+      "    cannot tell which. Disable any solver-specific presolve methods\n",
+      "    and re-solve to determine the precise problem status.\n",
+      "\n",
+      "    For GUROBI and CPLEX you can automatically perform this re-solve\n",
+      "    with the keyword argument prob.solve(reoptimize=True, ...).\n",
+      "    \n",
+      "  warnings.warn(INF_OR_UNB_MESSAGE)\n"
      ]
     }
    ],
@@ -699,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
