--- a/notebooks/Fig3.ipynb
+++ b/notebooks/Fig3.ipynb
@@ -120,6 +120,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.45830924e+02, 5.58996125e+03, 1.57319129e+04, 1.54131492e+04,\n",
+       "        1.70520583e+02, 3.13798074e+00, 1.90638596e+02, 2.18200209e+04,\n",
+       "        2.40378223e+03, 5.08104036e+02, 3.99363937e+02, 1.11502795e+04,\n",
+       "        2.50146356e+03, 9.74662262e+00, 9.42161579e+03, 7.45387938e+01,\n",
+       "        1.93800989e+03, 1.49751799e+03, 3.11032898e+03, 1.73014462e+03,\n",
+       "        1.52000564e+02, 6.49764630e+02, 6.30267691e+03, 3.73814803e+03,\n",
+       "        3.06032714e+04, 3.28233419e+01, 1.90190933e+04, 5.33310941e+01,\n",
+       "        9.57538678e+00, 1.45363260e+01, 2.27831330e+03, 3.86409757e+03,\n",
+       "        6.36672541e+01, 1.15675835e+04, 2.62409019e+03, 1.04102307e+05,\n",
+       "        1.00776312e+05, 9.96193931e+01, 1.35589107e+04, 8.73131978e+03,\n",
+       "        1.07565953e+03, 7.73834124e+03, 3.54744493e+02, 2.54977014e+02,\n",
+       "        2.71043981e+01, 1.09481573e+03, 9.04300256e+03, 1.70815648e+02,\n",
+       "        4.16984896e+04, 2.57718432e+03],\n",
+       "       [6.81398611e+02, 8.46869271e+02, 1.13614487e+03, 3.08084859e+02,\n",
+       "        1.19899400e+01, 1.70279247e+02, 9.38688005e+01, 1.01165366e+04,\n",
+       "        1.23475683e+04, 2.17735879e+02, 1.96907475e+05, 9.78328163e+02,\n",
+       "        7.09359086e+01, 5.79738763e+03, 1.16474162e+03, 4.02240233e+03,\n",
+       "        3.73862484e+01, 3.28827339e+02, 5.56994417e+02, 9.21101112e+01,\n",
+       "        6.33714671e+03, 3.12996261e+03, 1.92029079e+04, 2.41268377e+03,\n",
+       "        3.86336381e+03, 1.16232761e+03, 6.48509516e+02, 4.49376466e+04,\n",
+       "        7.26613394e+02, 3.20621216e+03, 4.89572775e+01, 7.98958793e+02,\n",
+       "        5.35876355e+05, 1.25413460e+03, 2.60621581e+02, 6.67033468e+03,\n",
+       "        1.15543118e+04, 1.41831750e+03, 7.44318853e+02, 3.74942310e+02,\n",
+       "        8.97395075e+01, 1.23932035e+03, 2.54251332e+03, 2.62827811e+03,\n",
+       "        5.74438413e+02, 7.18168348e+01, 2.96216681e+03, 1.25907067e+03,\n",
+       "        6.25304502e+02, 5.61560462e+02],\n",
+       "       [9.07147963e+03, 2.31688910e+04, 8.41365821e+03, 3.59822911e+04,\n",
+       "        1.05123493e+01, 9.63561627e+03, 1.10562718e+03, 3.72424345e+02,\n",
+       "        5.31155457e+03, 4.67246000e+02, 2.45387825e+04, 4.24320413e+04,\n",
+       "        1.24560732e+03, 1.34667203e+04, 1.39971276e+04, 1.97909243e+03,\n",
+       "        1.97260025e+04, 9.53669250e+02, 9.80643299e+03, 2.69475830e+03,\n",
+       "        7.17008407e+00, 2.84305386e+03, 2.08780969e+01, 3.26610484e+03,\n",
+       "        3.30040532e+02, 6.85517815e+03, 2.71754904e+03, 2.01966230e+02,\n",
+       "        6.81909196e+03, 1.70515965e+02, 6.20235360e+02, 3.42896907e+03,\n",
+       "        1.55776459e+02, 3.46539638e+02, 1.04647271e+01, 8.25061248e+01,\n",
+       "        2.97984462e+01, 8.46641164e+01, 8.56989887e+03, 1.07207911e+04,\n",
+       "        8.79887695e+03, 1.85204664e+01, 2.18868496e+05, 3.13191514e+03,\n",
+       "        2.44910147e+02, 7.15109451e+01, 1.92378456e+02, 1.86959785e+03,\n",
+       "        1.16406517e+04, 1.61852018e+02]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.lognormal(mean=np.log(1e3), sigma=np.log(10), size=(3,50))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
